fix: z-index number

--- a/src/sass/blocks/_accordion.sass
+++ b/src/sass/blocks/_accordion.sass
@@ -27,7 +27,7 @@
             letter-spacing: 1.2px
         &-btn
             display: flex
-            z-index: 9
+            z-index: 3
             margin: 0 auto 0 0
         &-btn:hover
             transform: scale(1.2)
