--- a/src/sass/blocks/_form.sass
+++ b/src/sass/blocks/_form.sass
@@ -25,7 +25,7 @@
     color: $light
   &__btn
     display: block
-    z-index: 9
+    z-index: 3
     margin: 0 auto
   &__label
     font-weight: 500
