--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -4,7 +4,7 @@
   left: 0
   top: 0
   right: 0
-  z-index: 10
+  z-index: 4
   transition: .4s
   &__wrapper
     max-width: 1140px
