--- a/src/sass/blocks/_modal.sass
+++ b/src/sass/blocks/_modal.sass
@@ -12,7 +12,7 @@
   left: 0
   background-color: rgba(0,0,0,.7)
   display: none
-  z-index: 10
+  z-index: 4
   &.active
     display: flex
     align-items: center
