--- a/src/sass/blocks/_slider.sass
+++ b/src/sass/blocks/_slider.sass
@@ -26,7 +26,7 @@
     font-weight: 800
     font-size: 120px
     line-height: 159px
-    z-index: 6
+    z-index: 2
     margin: 0 0 42px 0
     padding-top: 125px
     text-transform: uppercase
@@ -36,7 +36,7 @@
     font-size: 20px
     line-height: 48px
     letter-spacing: 1px
-    z-index: 6
+    z-index: 2
     text-transform: uppercase
     padding: 0 40px 0 56px
   &__wrapper
@@ -56,11 +56,11 @@
       left: 51%
       transform: translate(-50%,-50%)
       background: rgba(107, 201, 189, 0.5)
-      z-index: 3
+      z-index: 1
 .swiper
   &-pagination
     bottom: 140px !important
-    z-index: 9
+    z-index: 3
   &-pagination-bullet
     background: $light
     border-radius: 33px
@@ -74,7 +74,7 @@
     width: 36px
     height: 60px
     border: none
-    z-index: 9
+    z-index: 2
     position: absolute
     transform: translateY(-50%)
     cursor: pointer
@@ -97,7 +97,7 @@
       margin-left: 20%
       transition: 0.3s
   &-modal-btn
-    z-index: 9
+    z-index: 2
     cursor: pointer
     display: block
     margin: -101px auto 50px auto
